--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,54 @@
+alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
 attrs==22.1.0
+Babel @ file:///tmp/build/80754af9/babel_1620871417480/work
 beaker-pyteal==0.4.0
-certifi @ file:///opt/conda/conda-bld/certifi_1655968806487/work/certifi
-cffi==1.15.1
+brotlipy==0.7.0
+certifi @ file:///croot/certifi_1671487769961/work/certifi
+cffi @ file:///croot/cffi_1670423208954/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+click==8.1.3
+colorama @ file:///opt/conda/conda-bld/colorama_1657009087971/work
+coreapi==2.3.3
+coreapi-cli==1.0.9
+coreschema==0.0.4
+cryptography @ file:///croot/cryptography_1665612644927/work
+docopt @ file:///opt/conda/conda-bld/docopt_1663662411880/work
 docstring-parser==0.14.1
+docutils @ file:///opt/conda/conda-bld/docutils_1657175430858/work
 exceptiongroup==1.0.4
+idna @ file:///croot/idna_1666125576474/work
+imagesize @ file:///opt/conda/conda-bld/imagesize_1657179498843/work
 iniconfig==1.1.1
+itypes==1.2.0
+Jinja2 @ file:///croot/jinja2_1666908132255/work
+MarkupSafe @ file:///opt/conda/conda-bld/markupsafe_1654597864307/work
 msgpack==1.0.4
+numpy==1.23.5
 packaging==22.0
+pdoc==12.3.0
 pluggy==1.0.0
 py-algorand-sdk==1.20.2
-pycparser==2.21
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
 pycryptodomex==3.16.0
+Pygments==2.13.0
 PyNaCl==1.5.0
+pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
+pyparsing @ file:///opt/conda/conda-bld/pyparsing_1661452539315/work
+pyserial==3.5
+PySocks @ file:///home/builder/ci_310/pysocks_1640793678128/work
 pyteal==0.20.1
 pytest==7.2.0
+pytz @ file:///opt/conda/conda-bld/pytz_1654762638606/work
+requests @ file:///opt/conda/conda-bld/requests_1657734628632/work
 semantic-version==2.10.0
+snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1637937080595/work
+Sphinx @ file:///opt/conda/conda-bld/sphinx_1657784123546/work
+sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
+sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
+sphinxcontrib-htmlhelp @ file:///tmp/build/80754af9/sphinxcontrib-htmlhelp_1623945626792/work
+sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
+sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
+sphinxcontrib-serializinghtml @ file:///tmp/build/80754af9/sphinxcontrib-serializinghtml_1624451540180/work
 tomli==2.0.1
+uritemplate==4.1.1
+urllib3 @ file:///croot/urllib3_1670526988650/work
